[tool.poetry]
name = "arcade_platformer"
version = "0.1.0"
description = ""
authors = ["GussSoares <gustavo.soares.cdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
arcade = "^2.6.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
